--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,23 @@
 .columnName {
   font-weight: bold;
 }
+
+ul li a.active {
+  color: white;
+}
+
+ul li {
+  display: inline;
+  margin: 5px;
+}
+
+a {
+  color: white;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+ul li a:hover:not(.active) {
+  background-color: #61dafb;
+}
